improved scaffolding algorithm - still need to deal with overlaps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ RoxygenNote: 7.3.2
 Imports:
     dplyr,
     pafr,
-    igraph
+    igraph,
+    utils,
+    purrr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
